Aligning items and color fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,31 +11,31 @@
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: rgba(141, 189, 235);
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
-    #0885ff33 55deg,
+    #1075db33 55deg,
     #54d6ff33 120deg,
-    #0071ff33 160deg,
+    #3887e733 160deg,
     transparent 360deg
   );
   --secondary-glow: radial-gradient(
     rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
+    rgba(255, 255, 255, 0.46)
   );
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
   --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
+    #3758da80,
+    #3d97eb40,
+    #9db2ec30,
     #00000020,
     #00000010,
-    #00000010,
-    #00000080
+    #4192fd10,
+    #9fafee80
   );
 
   --callout-rgb: 238, 240, 241;
@@ -46,16 +46,16 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
+    --foreground-rgb: rgb(80, 114, 194);
+    --background-start-rgb: rgb(80, 114, 194);
     --background-end-rgb: 0, 0, 0;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
+      rgba(73, 110, 221, 0),
+      rgba(91, 123, 219, 0),
+      rgba(119, 148, 233, 0.3)
     );
 
     --tile-start-rgb: 2, 13, 46;
@@ -87,6 +87,17 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: rgb(141, 189, 235);
+}
+
+.mui-card-color {
+  background-color: #dbe6f2;
+}
+
+.flex-centered {
+  display: flex;
+  align-items: center;
+  justify-items: center;
 }
 
 body {
@@ -106,6 +117,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: rgb(238, 241, 244);
   }
 }
